# Bob_the_Bot

./: .env.example  Bob_the_Bot.py  README.MD  README.md  parametersLoader.py  pyproject.toml
Bob_source_code/: .env.example  Bob_the_Bot.py  parametersLoader.py  pyproject.toml
Bob_source_code/config/: parameters.json
